Dark mode: Table fix (#2418)

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -890,18 +890,14 @@ $table-accent-bg:                       transparent !default;
 $table-th-font-weight:                  null !default;
 
 $table-striped-color:                   $table-color !default;
-$table-striped-bg-factor:               .065 !default; // Boosted mod
-$table-striped-bg:                      rgba(var(--#{$prefix}emphasis-color-rgb), var(--#{$prefix}table-striped-bg-factor)) !default; // Boosted mod: instead of `rgba(var(--#{$prefix}emphasis-color-rgb), $table-striped-bg-factor)`
-$table-striped-hover-color:             var(--#{$prefix}black) !default; // Boosted mod
-$table-striped-hover-bg-factor:         .4 !default; // Boosted mod
-$table-striped-hover-bg:                rgba(var(--#{$prefix}emphasis-color-rgb), var(--#{$prefix}table-striped-hover-bg-factor)) !default; // Boosted mod
-$table-variant-striped-bg-factor:       .2 !default; // Boosted mod
-$table-variant-striped-hover-bg-factor: .865 !default; // Boosted mod
+$table-striped-bg-factor:               .035 !default; // Boosted mod: equivalent to `$gray-200`
+$table-striped-bg:                      rgba(var(--#{$prefix}black-rgb), var(--#{$prefix}table-striped-bg-factor)) !default; // Boosted mod: instead of `rgba(var(--#{$prefix}emphasis-color-rgb), $table-striped-bg-factor)`
+$table-variant-striped-bg-factor:       .08 !default; // Boosted mod
 
-$table-active-color:                    var(--#{$prefix}black) !default; // Boosted mod: instead of `$table-color`
+$table-active-color:                    $table-color !default;
 $table-active-bg-factor:                .135 !default; // Boosted mod
 $table-active-bg:                       rgba(var(--#{$prefix}emphasis-color-rgb), var(--#{$prefix}table-active-bg-factor)) !default; // Boosted mod: instead of `rgba(var(--#{$prefix}emphasis-color-rgb), $table-active-bg-factor)`
-$table-variant-active-bg-factor:        .6 !default; // Boosted mod
+$table-variant-active-bg-factor:        .4 !default; // Boosted mod
 
 $table-hover-color:                     $table-color !default;
 $table-hover-bg-factor:                 .065 !default; // Boosted mod
@@ -921,12 +917,19 @@ $table-group-separator-color:           currentcolor !default;
 $table-caption-color:                   var(--#{$prefix}caption-color, var(--#{$prefix}emphasis-color)) !default; // Boosted mod: instead of `var(--#{$prefix}secondary-color)`
 $table-caption-padding-y:               .75rem !default; // Boosted mod
 
-// Boosted mod: no $table-bg-scale
+$table-bg-scale:                        -60% !default;
 // scss-docs-end table-variables
 
 // scss-docs-start table-loop
 $table-variants: (
-  "dark": $dark
+  "primary":    shift-color($primary, $table-bg-scale),
+  "secondary":  shift-color($secondary, $table-bg-scale),
+  "success":    shift-color($success, $table-bg-scale),
+  "info":       shift-color($info, $table-bg-scale),
+  "warning":    shift-color($warning, $table-bg-scale),
+  "danger":     shift-color($danger, $table-bg-scale),
+  "light":      $light,
+  "dark":       $dark,
 ) !default;
 // scss-docs-end table-loop
 
